examples/bad/hold_assign_after_move.mko
fn main() {
    hold let mut x = "a"
    hold let y = x
    x = "b"
    print(y)
}
